# agentic-audit-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  terraform.yml
docs/: TECH_DEBT.md
eval/gold_scenarios/: manifest.v2.yaml  manifest.yaml  q1_exception_dc2_boundary_01.json  q1_exception_dc2_boundary_01.xlsx  q1_exception_dc2_variance_inadequate_01.json  q1_exception_dc2_variance_inadequate_01.xlsx  q1_exception_dc2_variance_no_explanation_01.json  q1_exception_dc2_variance_no_explanation_01.xlsx  q1_exception_dc9_figure_mismatch_01.xlsx  q1_exception_dc9_signoff_missing_01.json  q1_exception_dc9_signoff_missing_01.xlsx  q1_pass_dc2_01.json  q1_pass_dc2_01.xlsx  q1_pass_dc2_02.json  q1_pass_dc2_02.xlsx  q1_pass_dc2_03.xlsx  q1_pass_dc9_01.xlsx  q1_pass_dc9_02.xlsx  q3_exception_dc2_variance_inadequate_02.json  q3_exception_dc2_variance_inadequate_02.xlsx  q3_exception_dc2_variance_no_explanation_02.xlsx  q3_exception_dc9_boundary_01.json  q3_exception_dc9_boundary_01.xlsx  q3_exception_dc9_rate_no_amendment_01.json  q3_exception_dc9_rate_no_amendment_01.xlsx  q3_exception_dc9_signoff_missing_02.xlsx  q3_pass_dc2_01.xlsx  q3_pass_dc2_02.json  q3_pass_dc2_02.xlsx  q3_pass_dc9_01.json  q3_pass_dc9_01.xlsx  q3_pass_dc9_02.json  q3_pass_dc9_02.xlsx  q3_pass_dc9_03.xlsx
eval/gold_scenarios/tocs/: dc2_Q1.json  dc2_Q2.json  dc2_Q3.json  dc2_Q4.json  dc9_Q1.json  dc9_Q2.json  dc9_Q3.json  dc9_Q4.json  engagement_toc_ref.xlsx  q1_exception_dc2_variance_inadequate_01_ref.xlsx  q1_exception_dc9_figure_mismatch_01.json  q1_exception_dc9_figure_mismatch_01_ref.xlsx  q1_exception_dc9_signoff_missing_01.xlsx  q1_exception_dc9_signoff_missing_01_ref.xlsx  q1_pass_dc2_03.json  q1_pass_dc9_01.json  q1_pass_dc9_01_ref.xlsx  q1_pass_dc9_02.json  q1_pass_dc9_02_ref.xlsx  q3_exception_dc2_variance_inadequate_02_ref.xlsx  q3_exception_dc2_variance_no_explanation_02.json  q3_exception_dc2_variance_no_explanation_02_ref.xlsx  q3_exception_dc9_boundary_01_ref.xlsx  q3_exception_dc9_rate_no_amendment_01_ref.xlsx  q3_exception_dc9_signoff_missing_02.json  q3_exception_dc9_signoff_missing_02_ref.xlsx  q3_pass_dc2_01.json  q3_pass_dc2_01_ref.xlsx  q3_pass_dc9_01_ref.xlsx  q3_pass_dc9_02_ref.xlsx  q3_pass_dc9_03.json  q3_pass_dc9_03_ref.xlsx
eval/gold_scenarios/workpapers/: dc2_Q1_ref.xlsx  dc2_Q2_ref.xlsx  dc2_Q3_ref.xlsx  dc2_Q4_ref.xlsx  dc9_Q1_ref.xlsx  dc9_Q2_ref.xlsx  dc9_Q3_ref.xlsx  dc9_Q4_ref.xlsx
eval/gold_scenarios/workpapers/q1_exception_dc9_figure_mismatch_01/: billing_calc.xlsx
eval/gold_scenarios/workpapers/q1_exception_dc9_signoff_missing_01/: billing_calc.xlsx
eval/gold_scenarios/workpapers/q1_pass_dc9_01/: billing_calc.xlsx
eval/gold_scenarios/workpapers/q1_pass_dc9_02/: billing_calc.xlsx
eval/gold_scenarios/workpapers/q3_exception_dc9_boundary_01/: billing_calc.xlsx
infra/: verify_dev.sh
infra/bootstrap/: remote_state_bootstrap.sh
infra/databricks/: README.md
infra/databricks/notebooks/: bronze_smoke_ingest.py
infra/databricks/sql/: verify_bronze_smoke.sql
infra/terraform/: .terraform.lock.hcl  backend.tf  main.tf  providers.tf  variables.tf  versions.tf
infra/terraform/envs/dev/: backend.conf  (+1 more)
scripts/: benchmark_layer1.py  run_layer1.py  setup_warehouse_env.sh
src/agentic_audit/: __init__.py  config.py
src/agentic_audit/cli/: __init__.py  generate_gold.py
src/agentic_audit/generator/: __init__.py  content_hash.py  fake_data.py  populate.py  workbook_writer.py
src/agentic_audit/ingest/: __init__.py  bronze_smoke.py
src/agentic_audit/layer1_extract/: __init__.py  attribute_checks.py  bronze_reader.py  orchestrator.py  silver_writer.py
src/agentic_audit/layer2_narrative/: __init__.py  prompt_loader.py  silver_reader.py
src/agentic_audit/models/: __init__.py  engagement.py  engagement_gold_answer.py  evidence.py  gold_answer.py  narrative.py  scenario.py
src/agentic_audit/observability/: __init__.py  decorators.py
tests/fixtures/: corpus_hashes.txt
tests/integration/: test_layer1_e2e.py  test_layer2_silver_reader_e2e.py
tests/unit/: test_config.py
tests/unit/cli/: test_corpus_baseline.py  test_corpus_baseline_v2.py  test_corpus_determinism.py  test_dc9_cross_file_consistency.py  test_generate_engagement_corpus.py  test_generate_gold.py
tests/unit/generator/: test_content_hash.py  test_fake_data.py  test_populate.py  test_workbook_writer.py
tests/unit/ingest/: test_bronze_smoke.py
tests/unit/layer1_extract/: test_attribute_checks.py  test_bronze_reader.py  test_orchestrator.py  test_silver_writer.py
tests/unit/layer2_narrative/: test_prompt_loader.py  test_silver_reader.py
tests/unit/models/: test_engagement.py  test_engagement_gold_answer.py  test_evidence_models.py  test_evidence_narratable_constants.py  test_gold_answer.py  test_gold_answer_integration.py  test_manifest_integration.py  test_narrative_models.py  test_scenario.py  test_workpaper_spec.py
tests/unit/observability/: test_decorators.py
tests/unit/scripts/: test_benchmark_layer1.py  test_run_layer1.py
(+39 files in other folders)
