[project]
name = "agentic-audit-framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Rajendra B Pal",email = "rajendra1b1pal@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=1.1.8,<2.0.0)",
    "langchain-openai (>=1.1.15,<2.0.0)",
    "openai (>=2.32.0,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2,<3.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "opentelemetry-api (>=1.41.0,<2.0.0)",
    "opentelemetry-sdk (>=1.41.0,<2.0.0)",
    "opentelemetry-instrumentation (>=0.62b0,<0.63)",
    "mlflow (>=3.11.1,<4.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
